# SwarmControl

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
Analysis/: README.md  generate_all_plots_v3.py  plot_all_trajectories.py  plot_trajectories.py  reference.json  test_single_trajectory.py  visualize_results.py
Analysis/Trajectories/: Gab_C_1.json  p2_B.json  reference_trajectory.json  t.json
Analysis/old/: analyze_metrics.py  compare_conditions.py  plot_all_trajectories.py  plot_trajectories.py
Control/: README.md  check.py  hand_tracker.py  pyproject.toml  requirements.txt  simu.py  tracker.py
Control/apps/: calibrate.py  linearize.py  simulator.py  tracker.py
Control/calibrations/: Darius.json  Darius0.json  DariusG.json  DariusR.json  Gabriel.json  Matala.json  N.json  Y.json  Yang.json  gabriel.json  p1.json  p2.json
Control/src/: hand_detector.py  websocket_server.py
Control/src/tools/: calibration_tool.py  linearization_tool.py
Control/swarm_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Control/swarm_control/calibration/: __init__.py  capture.py  normalize.py  profile.py
Control/swarm_control/features/: __init__.py  two_hand.py
Control/swarm_control/io/: __init__.py  camera.py
Control/swarm_control/pose/: __init__.py  base.py  head_pose.py  mediapipe_hands.py  rtmpose.py
Control/swarm_control/transport/: __init__.py  websocket_server.py
Control/swarm_control/ui/: __init__.py  overlay.py
SoundMapping/: README.md
SoundMapping/SoundMappingUnity/: .gitignore  XR_SETUP_GUIDE.md
(+197 files in other folders)
