[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm_control"
version = "0.2.0"
description = "Hand/body tracking → drone swarm control bridge"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "websockets>=12.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
mediapipe = ["mediapipe>=0.10.0"]
rtmpose = ["rtmlib>=0.0.13", "onnxruntime>=1.17.0"]
rtmpose-gpu = ["rtmlib>=0.0.13", "onnxruntime-gpu>=1.17.0"]
all = [
    "mediapipe>=0.10.0",
    "rtmlib>=0.0.13",
    "onnxruntime>=1.17.0",
]

[tool.setuptools.packages.find]
include = ["swarm_control*"]
